(style.css: avoids scrollbars on some s.h. output)

--- a/doc-template/first/files/media/style.css
+++ b/doc-template/first/files/media/style.css
@@ -167,6 +167,5 @@ div.sidebar h2 {
   border-radius: 7px;
   font-size: 0.85em !important;
   margin-top: 0 !important;
-  padding-top: 1px; /* without these we get vert. scrollbars on FF!? */
-  padding-bottom: 1px;
+  padding: 1px 4px 1px 0; /* avoids some scrollbars (!?) */
 }
